prevent tower descriptions overflow

--- a/src/style.css
+++ b/src/style.css
@@ -958,7 +958,7 @@
     font-size: 18px;
     line-height: 24px;
     color: #271002;
-    padding: 10px;
+    padding: 2px;
 }
 .tower-name-and-portrait {
     display: flex;
